--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,70 @@
+@media(max-width:500px){
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.submitButton {
+  padding: 5px 25px;
+  width: 25%;
+  border-radius: 5px;
+  margin-top: 20px;
+  font-size: 12px;
+  color: black;
+  background-color: antiquewhite;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+
+form {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 400px;
+  width: 100%;
+  margin: 0 auto;
 }
 
-.App-link {
-  color: #61dafb;
+
+ 
+h1 {
+  margin-bottom: 50px;
+  color:  rgb(0, 0, 20);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.navBar {
+  background-color: rgb(1, 1, 22);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+h2 {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 600;
+  font-size: 15px;
+  line-height: 18px;
+  
+  margin:4%;
+  display: flex;
+  align-items: center;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  
+  color: #000000;
+}
+
+img {
+  width:100%;
+}
+
+p {
+  font-size: 9px;
+line-height: 11px;
+text-align: center;
+
+color: #797979;
+}
+
 }
